--- a/posts/2024-08-13-tidycensus-exploration/index.qmd
+++ b/posts/2024-08-13-tidycensus-exploration/index.qmd
@@ -18,7 +18,11 @@ editor:
 
 # Introduction
 
-I've used data from the U.S. Census Bureau several times, and for this project, I wanted to reacquaint myself with the `tidycensus::` package to gather and wrangle data. I also wanted to use the `usmap::` package to generate a simple U.S. map, and the `gt::` package to display the data in a nice table format.
+I've used data from the U.S. Census Bureau several times, and for this
+project, I wanted to reacquaint myself with the `tidycensus::` package
+to gather and wrangle data. I also wanted to use the `usmap::` package
+to generate a simple U.S. map, and the `gt::` package to display the
+data in a nice table format.
 
 ## Setup
 
@@ -52,9 +56,15 @@ my.theme <- theme(
   strip.text = element_text(color="black", size=14))
 ```
 
-For this analysis, I'm interested in looking at the most recent state-level child poverty data available from the U.S. Census Bureau. The `tidycensus::` package allows API access to the decennial Census, as well as the more frequent American Community Survey (ACS).
+For this analysis, I'm interested in looking at the most recent
+state-level child poverty data available from the U.S. Census Bureau.
+The `tidycensus::` package allows API access to the decennial Census, as
+well as the more frequent American Community Survey (ACS).
 
-The `tidycensus::load_variables()` function provides a simple way to query the available data within each product. Combining this with `stringr::str_detect()` is a nice way to search through the tens of thousands of data series that are available through the U.S. Census API.
+The `tidycensus::load_variables()` function provides a simple way to
+query the available data within each product. Combining this with
+`stringr::str_detect()` is a nice way to search through the tens of
+thousands of data series that are available through the U.S. Census API.
 
 ```{r inspect_variables, include=TRUE}
 load_variables(2022, "acs1", cache = TRUE) %>% 
@@ -64,18 +74,36 @@ load_variables(2022, "acs1", cache = TRUE) %>%
 
 For this demo, I'll use the following series:
 
-* *B01001_003*: Estimate!!Total:!!Male:!!Under 5 years (all racial groups)
-* *B01001_027*: Estimate!!Total:!!Female:!!Under 5 years (all racial groups)
-* *B17001_004*: Estimate!!Total:!!Income in the past 12 months below poverty level:!!Male:!!Under 5 years
-* *B17001_018*: Estimate!!Total:!!Income in the past 12 months below poverty level:!!Female:!!Under 5 years
+-   *B01001_003*: Estimate!!Total:!!Male:!!Under 5 years (all racial
+    groups)
+-   *B01001_027*: Estimate!!Total:!!Female:!!Under 5 years (all racial
+    groups)
+-   *B17001_004*: Estimate!!Total:!!Income in the past 12 months below
+    poverty level:!!Male:!!Under 5 years
+-   *B17001_018*: Estimate!!Total:!!Income in the past 12 months below
+    poverty level:!!Female:!!Under 5 years
 
-## Initial tour of key tidycensus::get_acs() function 
+## Initial tour of key tidycensus::get_acs() function
 
-The `tidycensus::` package has so much to offer (and I still have plenty to learn!). There are a bunch of useful helper functions/arguments to assist in fetching data. Some noteworthy ones include:  
+The `tidycensus::` package has so much to offer (and I still have plenty
+to learn!). There are a bunch of useful helper functions/arguments to
+assist in fetching data. Some noteworthy ones include:
 
-* Each variable returns the geography, an estimate, and the margin of error ("moe"). Geographies can span from states, regions and the country as a whole, down to areas like school districts, voting districts, census block groups, and many others.
-* `summary_var=`: often the variable that you want would be made more meaningful as a ratio or with a demonminator. For example, the number of children in poverty could be useful on its own, but you're likely to want to see that series as a percent of the total children. With the summary_var argument, you can tell the function which secondary variable you want to grab in the same API call.
-* `ouput=wide`: related to the above, I wanted to look at child poverty in a way that would require multiple summary variables (e.g. the percent of girls *and* boys in poverty). Since you can only have one summary variable, `output='wide'` allows you to grab all of the series that you may need in the same call. 
+-   Each variable returns the geography, an estimate, and the margin of
+    error ("moe"). Geographies can span from states, regions and the
+    country as a whole, down to areas like school districts, voting
+    districts, census block groups, and many others.
+-   `summary_var=`: often the variable that you want would be made more
+    meaningful as a ratio or with a demonminator. For example, the
+    number of children in poverty could be useful on its own, but you're
+    likely to want to see that series as a percent of the total
+    children. With the summary_var argument, you can tell the function
+    which secondary variable you want to grab in the same API call.
+-   `ouput=wide`: related to the above, I wanted to look at child
+    poverty in a way that would require multiple summary variables (e.g.
+    the percent of girls *and* boys in poverty). Since you can only have
+    one summary variable, `output='wide'` allows you to grab all of the
+    series that you may need in the same call.
 
 ```{r get_acs, include=TRUE}
 df <- get_acs(geography = 'state',
@@ -84,7 +112,8 @@ df <- get_acs(geography = 'state',
         output = 'wide')
 ```
 
-To make the data more user-friendly, I'll update the column names of the table.
+To make the data more user-friendly, I'll update the column names of the
+table.
 
 ```{r update_colnames, include=TRUE}
 name_cols <- c('geoid', 'state', 
@@ -96,14 +125,16 @@ name_cols <- c('geoid', 'state',
 colnames(df) <- name_cols
 ```
 
-And for this exercise, I'll also drop the margin of error fields, since I'm not doing a statistical analysis that would require it.
+And for this exercise, I'll also drop the margin of error fields, since
+I'm not doing a statistical analysis that would require it.
 
 ```{r drop_cols, include=TRUE}
 df <- df %>% 
   select(-contains("moe"))
 ```
 
-Next, I'll create some fields to combine gender-based poverty estimates and calculate a percent of the child population measure.
+Next, I'll create some fields to combine gender-based poverty estimates
+and calculate a percent of the child population measure.
 
 ```{r df_mutate, include=TRUE}
 (df <- df %>% 
@@ -157,9 +188,14 @@ df %>%
 
 # Quick mapping with usmap::
 
-The `usmapp::` package makes rendering a map of the US quick and easy. Though it's not meant to replace `sf::` or packages that allow for more sophisticated maps, it does allow for a quick way to make a U.S. map. For this demo, I'll plot the state-level poverty data that I collected and manipulated in earlier steps. 
+The `usmapp::` package makes rendering a map of the US quick and easy.
+Though it's not meant to replace `sf::` or packages that allow for more
+sophisticated maps, it does allow for a quick way to make a U.S. map.
+For this demo, I'll plot the state-level poverty data that I collected
+and manipulated in earlier steps.
 
-This shows that child poverty is concentrated in southern and southeastern states (as a percent of the child population).
+This shows that child poverty is concentrated in southern and
+southeastern states (as a percent of the child population).
 
 ```{r plot_u5_poverty, include=TRUE, fig.align='center'}
 (perc_poverty_map <- plot_usmap(regions = 'states',
@@ -174,7 +210,7 @@ This shows that child poverty is concentrated in southern and southeastern state
         legend.title = element_blank()))
 ```
 
-# Great tables with gt:: 
+# Great tables with gt::
 
 ```{r read_regions, include=TRUE, echo=FALSE, message=FALSE}
 regions <- read_csv('.//data/census_regions.csv') %>% clean_names()
@@ -259,10 +295,13 @@ df_county <- get_acs(geography = 'county',
 
 # Conclusion
 
-In this first `tidycensus::` post, I demonstrated: 
+In this first `tidycensus::` post, I demonstrated:
 
-* How to fetch data from the U.S. Census Bureau
-* A simple way to search for the type of data that you're interested in exploring
-* How to use some of the `tidycensus::` functions and arguments to support in data wrangling
-* How to make a simple map using the `usmap::` package
-* How to make a clean and visually appealing table using the `gt::` package
+-   How to fetch data from the U.S. Census Bureau
+-   A simple way to search for the type of data that you're interested
+    in exploring
+-   How to use some of the `tidycensus::` functions and arguments to
+    support in data wrangling
+-   How to make a simple map using the `usmap::` package
+-   How to make a clean and visually appealing table using the `gt::`
+    package
