--- a/posts/2017-10-01-gapminder-nested-models/index.qmd
+++ b/posts/2017-10-01-gapminder-nested-models/index.qmd
@@ -32,9 +32,9 @@ my.theme <- theme(
   axis.text = element_text(family="Arial", size=11), 
   plot.caption = element_text(family="Arial", color="black", size=12), 
   panel.background =  element_rect(fill = "#F7F7F7", colour = NA), 
-  panel.grid.major = element_line(colour = "grey90", size = 0.5),
-  panel.grid.minor = element_line(colour = "grey93", size = 0.5),
-  panel.border = element_rect(colour = "black", size = 0.5, fill=NA, linetype = 1),
+  panel.grid.major = element_line(colour = "grey90", linewidth = 0.5),
+  panel.grid.minor = element_line(colour = "grey93", linewidth = 0.5),
+  panel.border = element_rect(colour = "black", linewidth = 0.5, fill=NA, linetype = 1),
   legend.title=element_blank(), 
   legend.text = element_text(family="Arial", color="black", size=12, hjust=0),
   strip.text = element_text(family="Arial", color="black", size=14))
